--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets"
+@import "bootstrap"
+
+$primary-color: #003346
+body
+  background-color: $primary-color
