--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,25 @@
-<!DOCTYPE html>
-<html>
-Saluuuuuuuuuuuuuuuuuut nounou
-</html>
+<div id="presentation" class="row">
+  <div id="pres-top">
+    <div class="circle" id="circle-top-left">
+    </div>
+    <div class="circle" id="circle-top-middle">
+    </div>
+    <div class="circle" id="circle-top-right">
+    </div>
+  </div>
+  <div id="pres-middle">
+    <div id="trapezoid">
+    </div>
+    <div id="trapezoid-inside">
+    </div>
+    <div id="who-i-am">
+    <%= I18n.t('presentation.who', man: "#{I18n.t('presentation.me')}") %>
+    </div>
+    <div id="circle">
+    </div>
+    <div id="circle-inside">
+    </div>
+    <div id="burst-12">
+    </div>
+  </div>
+</div>
