--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,51 @@
 <div id="presentation" class="row">
+  <div id="face">
+  </div>
   <div id="pres-top">
-    <div class="circle" id="circle-top-left">
+    <div>
+      <div class="circle" data-id="top-left" id="circle-top-left" onmouseover="animLine(this)" onmouseout="inanimeLine(this)">
+        <div id="pict-circle-top-left">
+          <svg class="heart-icon heart-icon-2" viewBox="0 0 90.65 85.04" height="37px" width="43px" version="1.1">
+            <path class="heart-2" d=" M45.137,23.041c4.912-24.596,40.457-27.775,42.128-0.435c1.398,22.88-21.333,40.717-42.128,50.522 M45.137,23.041
+                         C40.225-1.555,5.057-4.734,3.387,22.606c-1.398,22.88,20.955,40.717,41.75,50.522" stroke-miterlimit="25" stroke-linejoin="round" 
+                         stroke-linecap="round" stroke-width="10" stroke="#FF3532" fill="#FF3532">
+          </svg>
+        </div>
+      </div>
+      <div class="circle" id="circle-top-left-arrond">
+      </div>
+      <div id="line-top-left" class="line">
+        <svg height="70" width="50">
+          <g fill="none" stroke="white" stroke-width="2">
+            <path stroke-dasharray="4,5" d="M0 0 l37 53" stroke-dashoffset="0.00"/>
+          </g>
+          Sorry, your browser does not support inline SVG.
+        </svg>
+      </div>
     </div>
-    <div class="circle" id="circle-top-middle">
+    <div>
+      <div class="circle" id="circle-top-middle">
+      </div>
+      <div id="line-top-middle" class="line">
+        <svg height="60" width="20">
+          <g fill="none" stroke="white" stroke-width="5">
+            <path stroke-dasharray="4,5" d="M0 0 l0 48" />
+          </g>
+          Sorry, your browser does not support inline SVG.
+        </svg>
+      </div>
     </div>
-    <div class="circle" id="circle-top-right">
+    <div>
+      <div class="circle" id="circle-top-right">
+      </div>
+      <div id="line-top-right" class="line">
+        <svg height="70" width="50">
+          <g fill="none" stroke="white" stroke-width="2">
+            <path stroke-dasharray="4,5" d="M2 48 l134 -173" />
+          </g>
+          Sorry, your browser does not support inline SVG.
+        </svg>
+      </div>
     </div>
   </div>
   <div id="pres-middle">
@@ -13,7 +54,8 @@
     <div id="trapezoid-inside">
     </div>
     <div id="who-i-am">
-    <%= I18n.t('presentation.who', man: "#{I18n.t('presentation.me')}") %>
+      <span id="who-jimmy"><%= I18n.t('presentation.me') %></span>
+      <span id="who-dev"><%= I18n.t('presentation.dev') %></span>
     </div>
     <div id="circle">
     </div>
