adding add svg images finish animation first-top finished

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,10 @@
 <div id="presentation" class="row">
   <div id="face">
   </div>
+<!-- the top of presentation : contain menu -->
   <div id="pres-top">
-    <div>
+    <div id="top-left">
+<!-- first menu option -->
       <div class="circle" data-id="top-left" id="circle-top-left" onmouseover="animLine(this)" onmouseout="inanimeLine(this)">
         <div id="pict-circle-top-left">
           <svg class="heart-icon heart-icon-2" viewBox="0 0 90.65 85.04" height="37px" width="43px" version="1.1">
@@ -12,7 +14,7 @@
           </svg>
         </div>
       </div>
-      <div class="circle" id="circle-top-left-arrond">
+      <div class="circle circle-arround" id="circle-top-left-arrond">
       </div>
       <div id="line-top-left" class="line">
         <svg height="70" width="50">
@@ -23,8 +25,64 @@
         </svg>
       </div>
     </div>
-    <div>
-      <div class="circle" id="circle-top-middle">
+<!-- second menu option -->
+    <div id="top-middle">
+      <div class="circle" data-id="top-middle" id="circle-top-middle" onmouseover="animLine(this)" onmouseout="inanimeLine(this)">
+        <div id="pict-circle-top-middle">
+          <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="60" id="svg2" viewBox="0 -7 63 83">
+            <defs id="defs4"/>
+            <metadata id="metadata7">
+              <rdf:RDF>
+                <cc:Work rdf:about="">
+                  <dc:format>image/svg+xml</dc:format>
+                  <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/>
+                  <dc:title/>
+                </cc:Work>
+              </rdf:RDF>
+            </metadata>
+            <g transform="translate(0,-992.36218)" id="layer1">
+              <path d="m 49.498354,1001.74 c 3.445106,0.4016 3.975703,1.0945 4.162825,5.4371 0.131649,3.0379 -0.06213,3.8781 -1.402451,6.0971 -1.200832,1.9884 -2.841584,3.9438 
+                      -5.741596,6.8421 -2.98847,2.987 -4.200691,4.0513 -7.905104,6.9402 -8.840712,6.8946 -21.583756,15.665 -25.14794,17.3084 -1.595339,0.7354 -4.6509651,1.4476 
+                      -6.2838779,1.4646 -1.5703403,0.016 -1.9889593,-0.1211 -2.7386292,-0.8998 -1.8672211,-1.9397 -1.8101225,-11.9688 0.1035438,-18.152 0.627338,-2.0274 1.3651736,
+                      -3.5548 2.7640725,-5.722 2.9701288,-4.6007 7.5055648,-9.2072 11.8361338,-12.0214 4.871963,-3.1655 11.339707,-5.8235 16.704102,-6.8645 1.898728,-0.3683 3.316353,
+                      -0.8493 8.376027,-0.8946 3.024121,-0.028 4.949239,0.4269 5.273337,0.4645 l 0,0 z" id="path4032-6" style="fill:#aa4400;stroke:#aa4400;stroke-width:0.08875135;
+                      stroke-linecap:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 37.907344,1001.35 c -2.985658,0.3338 -8.185416,1.56 -14.792208,4.8941 -6.606939,3.3343 -12.932089,9.2436 -16.8279127,16.2406 -3.8956765,6.9971 -3.6662492,19.6345
+                      -1.7642673,22.025 1.9019821,2.3903 4.3426972,2.4471 11.12818,-1.1126 3.506345,-1.8393 24.747957,-16.2933 28.9059,-20.3562 4.157794,-4.0628 8.587174,-9.334 9.426927,
+                      -12.6786 0.839606,-3.3444 0.322914,-7.8609 -1.963075,-8.6788 -2.285987,-0.8177 -11.128031,-0.6673 -14.113544,-0.3335 z" id="path3067-7" style="fill:none;
+                      stroke:#aa4400;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 10.100081,1048.2123 c -5.6713181,-2.456 -4.6401908,-6.8775 -4.5614766,-8.7221 0.2511148,-5.8847 8.9214126,-13.3236 10.1360776,-14.6442 6.242584,-6.7853 15.642099,
+                      -13.9289 22.756323,-17.8058 3.605889,-1.965 5.373429,-3.4099 11.306627,-4.8805 6.356606,-1.5757 5.67818,2.2467 5.67818,2.2467" id="path3176" style="fill:none;
+                      stroke:#ffffff;stroke-width:2.00883651;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4.80000019;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 23.307827,1048.1996 c 2.98558,-0.3338 8.185358,-1.5601 14.792211,-4.8942 6.606854,-3.3341 12.932077,-9.2435 16.827832,-16.2406 3.895754,-6.997 3.530493,-19.968 
+                      1.628511,-22.3585 -1.901981,-2.3905 -7.672263,-1.3639 -14.520795,2.1135 -5.813365,2.9518 -20.133882,14.1797 -25.377459,19.6889 -3.979677,4.1809 -8.5873003,9.334 
+                      -9.4269088,12.6784 -0.8396095,3.3445 -0.323044,7.8611 1.9629476,8.679 2.2859942,0.8178 11.1280822,0.6674 14.1136612,0.3335 z" id="path3067" style="fill:#aa4400;
+                      fill-opacity:1;stroke:#aa4400;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 20.669792,1025.6285 c -0.87767,-0.503 -5.113865,-4.8028 -5.524945,-5.6076 -0.541287,-1.0602 -0.281768,-1.6925 0.624997,-1.5224 0.607523,0.1145 2.113736,1.3844 
+                      4.022119,3.3927 1.666911,1.7539 2.015094,2.1918 2.314859,2.9082 0.216417,0.5175 0.212435,0.5439 -0.132614,0.8892 -0.195662,0.1957 -0.407149,0.3548 -0.469973,0.3538 
+                      -0.06282,-7e-4 -0.438317,-0.1869 -0.83443,-0.4139 l 0,0 z" id="path3980-02-6" style="fill:#ffffff;stroke:#ffffff;stroke-width:0.07176667;stroke-linecap:round;
+                      stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 23.610584,1023.109 c -0.87767,-0.503 -5.113865,-4.8028 -5.524945,-5.6076 -0.541287,-1.0602 -0.281768,-1.6925 0.624997,-1.5224 0.607523,0.1145 2.113736,1.3844
+                      4.022119,3.3927 1.666911,1.7539 2.015094,2.1918 2.314859,2.9082 0.216417,0.5175 0.212435,0.5439 -0.132614,0.8892 -0.195662,0.1957 -0.407149,0.3548 -0.469973,0.3538 
+                      -0.06282,-7e-4 -0.438317,-0.1869 -0.83443,-0.4139 l 0,0 z" id="path3980-02-6-2" style="fill:#ffffff;stroke:#ffffff;stroke-width:0.07176667;stroke-linecap:round;
+                      stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 26.548084,1020.2965 c -0.87767,-0.503 -5.113865,-4.8028 -5.524945,-5.6076 -0.541287,-1.0602 -0.281768,-1.6925 0.624997,-1.5224 0.607523,0.1145 2.113736,1.3844
+                      4.022119,3.3927 1.666911,1.7539 2.015094,2.1918 2.314859,2.9082 0.216417,0.5175 0.212435,0.5439 -0.132614,0.8892 -0.195662,0.1957 -0.407149,0.3548 -0.469973,0.3538 
+                      -0.06282,-7e-4 -0.438317,-0.1869 -0.83443,-0.4139 l 0,0 z" id="path3980-02-6-6" style="fill:#ffffff;stroke:#ffffff;stroke-width:0.07176667;stroke-linecap:round;
+                      stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 29.485584,1017.859 c -0.87767,-0.503 -5.113865,-4.8028 -5.524945,-5.6076 -0.541287,-1.0602 -0.281768,-1.6925 0.624997,-1.5224 0.607523,0.1145 2.113736,1.3844 
+                      4.022119,3.3927 1.666911,1.7539 2.015094,2.1918 2.314859,2.9082 0.216417,0.5175 0.212435,0.5439 -0.132614,0.8892 -0.195662,0.1957 -0.407149,0.3548 -0.469973,0.3538 
+                      -0.06282,-7e-4 -0.438317,-0.1869 -0.83443,-0.4139 l 0,0 z" id="path3980-02-6-0" style="fill:#ffffff;stroke:#ffffff;stroke-width:0.07176667;stroke-linecap:round;
+                      stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 32.985584,1015.234 c -0.87767,-0.503 -5.113865,-4.8028 -5.524945,-5.6076 -0.541287,-1.0602 -0.281768,-1.6925 0.624997,-1.5224 0.607523,0.1145 2.113736,1.3844 
+                      4.022119,3.3927 1.666911,1.7539 2.015094,2.1918 2.314859,2.9082 0.216417,0.5175 0.212435,0.5439 -0.132614,0.8892 -0.195662,0.1957 -0.407149,0.3548 -0.469973,0.3538 
+                      -0.06282,-7e-4 -0.438317,-0.1869 -0.83443,-0.4139 l 0,0 z" id="path3980-02-6-4" style="fill:#ffffff;stroke:#ffffff;stroke-width:0.07176667;stroke-linecap:round;
+                      stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+            </g>
+          </svg>
+        </div>
+      </div>
+      <div class="circle circle-arround" id="circle-top-middle-arrond">
       </div>
       <div id="line-top-middle" class="line">
         <svg height="60" width="20">
@@ -35,19 +93,54 @@
         </svg>
       </div>
     </div>
-    <div>
-      <div class="circle" id="circle-top-right">
+<!-- third menu option -->
+    <div id="top-right">
+      <div class="circle" data-id="top-right" id="circle-top-right" onmouseover="animLine(this)" onmouseout="inanimeLine(this)">
+        <div id="pict-circle-top-right">
+          <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="60" id="svg2">
+            <defs id="defs4"/>
+            <metadata id="metadata7">
+              <rdf:RDF>
+                <cc:Work rdf:about="">
+                  <dc:format>image/svg+xml</dc:format>
+                  <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/>
+                  <dc:title/>
+                </cc:Work>
+              </rdf:RDF>
+            </metadata>
+            <g transform="translate(0,-992.36218)" id="layer1">
+              <path d="m 13.486239,25.779817 -0.366973,11.376146 c 0,0 2.201835,3.577982 6.330275,3.853211 4.128441,0.275229 15.87156,0.27523 15.87156,0.27523 0,0 6.718455,-0.925462
+                       6.788991,-2.844037 l 0.458715,-12.477064 z" transform="translate(0,992.36218)" id="path3857" style="fill:#87aade;stroke:#87aade;stroke-width:1px
+                       ;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"/>
+              <path d="M 30.091743,33.577982 48.807339,23.027523 27.522936,12.844036 7.6146789,22.568807 25.412844,33.486238 z" transform="translate(0,992.36218)" id="path3855" 
+                       style="fill:#afc6e9;stroke:#afc6e9;stroke-width:1.70000005;stroke-linecap:butt;stroke-linejoin:round;stroke-miterlimit:15.60000038;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 28.256881,20.550459 c -0.307551,0.744884 1.433241,0.372092 1.834863,1.376146 4.556575,1.009175 13.211318,1.804591 14.495412,3.302753 1.362135,1.573645 1.376147,
+                       13.394495 0,14.036697 -0.610228,0 -0.468403,4.791474 -0.917431,5.321101 -1.02832,1.212899 5.050914,1.643767 3.669724,0.733945 -0.928143,-0.611389 0.390292,
+                       -6.529491 -0.642201,-6.697249 -1.433016,-0.232834 -1.035255,-2.094748 -0.917431,-14.220183 -8.511991,-1.31211 -10.27523,-2.446483 -15.412845,-3.669724 
+                       -0.321885,0.511056 -2.110091,-0.183486 -2.110091,-0.183486 z" transform="translate(0,992.36218)" id="path3859" style="fill:#ff7f2a;stroke:#ff7f2a;stroke-width:1;
+                       stroke-linecap:butt;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 31.009175,21.238533 a 1.7889909,1.6055046 0 1 1 -3.577982,0 1.7889909,1.6055046 0 1 1 3.577982,0 z" transform="matrix(0.85125805,0,0,0.74854468,4.0710378,997.47337)" 
+                       id="path3861" style="fill:#ffb380;fill-opacity:1;stroke:#ffb380;stroke-width:1;stroke-linecap:butt;stroke-linejoin:round;stroke-miterlimit:4;
+                       stroke-opacity:1;stroke-dasharray:none"/>
+              <path d="m 46.972477,1030.986 c -1.083871,-0.2354 -0.815201,1.523 -2.568808,0.1835" id="path3863" style="fill:#ffb380;stroke:#ffb380;stroke-width:1px;stroke-linecap:round;
+                       stroke-linejoin:miter;stroke-opacity:1"/>
+            </g>
+          </svg>
+        </div>
+      </div>
+      <div class="circle circle-arround" id="circle-top-right-arrond">
       </div>
       <div id="line-top-right" class="line">
         <svg height="70" width="50">
           <g fill="none" stroke="white" stroke-width="2">
-            <path stroke-dasharray="4,5" d="M2 48 l134 -173" />
+            <path stroke-dasharray="4,5" d="M37 1 l-36 45" />
           </g>
           Sorry, your browser does not support inline SVG.
         </svg>
       </div>
     </div>
   </div>
+<!-- the middle of presentation : contain text with design -->
   <div id="pres-middle">
     <div id="trapezoid">
     </div>
