--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -120,7 +120,7 @@ $primary-color: #003346
     visibility: hidden
     margin:
       left: 0px
-      top: 30px
+      top: 0px
     height: 60px
     width: 60px
     opacity: 1
@@ -131,7 +131,7 @@ $primary-color: #003346
     visibility: visible
     margin:
       left: -6px
-      top: 24px
+      top: -6px
     height: 72px
     width: 72px
     opacity: 1
@@ -147,7 +147,7 @@ $primary-color: #003346
     visibility: visible
     margin:
       left: -6px
-      top: 24px
+      top: -6px
     height: 72px
     width: 72px
     opacity: 0.5
@@ -158,7 +158,7 @@ $primary-color: #003346
     filter: blur(1px)
     margin:
       left: -6px
-      top: 24px
+      top: -6px
     height: 72px
     width: 72px
   90%
@@ -169,9 +169,11 @@ $primary-color: #003346
     visibility: hidden
     margin:
       left: -6px
-      top: 24px
+      top: -6px
     height: 72px
     width: 72px
+
+
 #presentation
   margin:
     top: 5px
@@ -202,25 +204,28 @@ $primary-color: #003346
   position: absolute
   cursor: pointer
   z-index: 2
-#circle-top-left
-  margin-top: 30px
 .line
   position: absolute
-#circle-top-left-arrond 
+.circle-arround
   visibility: hidden
   position: absolute
   margin:
-    top: 24px
-    left: -6
+    top: -6px
+    left: -6px
   z-index: 1
   border: 4px solid white
   background-color: ghostwhite
   height: 72px
   width: 72px
+#top-left
+  height: 141px
+  position: absolute
+  width: 90px
+  margin-top: 30px
 #line-top-left
   margin:
     left: 47px
-    top: 84px
+    top: 54px
   z-index: 5
 #pict-circle-top-left
   margin:
@@ -228,20 +233,26 @@ $primary-color: #003346
     top: 13px
   position: absolute
   cursor: pointer
-#circle-top-middle
+#top-middle
+  height: 118px
   margin-left: 140px
+  position: absolute
+  width: 63px
 #line-top-middle
   margin:
-    left: 169px
+    left: 28px
     top: 60px
   z-index: 5
-#circle-top-right
+#top-right
+  height: 200px
   margin-left: 280px
   margin-top: 30px
+  position: absolute
+  width: 200px
 #line-top-right
   margin:
-    left: 255px
-    top: 85px
+    left: -27px
+    top: 55px
   z-index: 5
 
 #pres-middle
