add nexus5 perfect responsive

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -195,7 +195,7 @@ $primary-color: #003346
   margin:
     left: auto
     right: auto
-  width: 360px
+  width: 583px
 .circle
   border: 2px solid white
   border-radius: 50%
@@ -221,7 +221,9 @@ $primary-color: #003346
   height: 141px
   position: absolute
   width: 90px
-  margin-top: 30px
+  margin:
+    top: 30px
+    left: 110px
 #line-top-left
   margin:
     left: 47px
@@ -235,7 +237,7 @@ $primary-color: #003346
   cursor: pointer
 #top-middle
   height: 118px
-  margin-left: 140px
+  margin-left: 250px
   position: absolute
   width: 63px
 #line-top-middle
@@ -244,11 +246,11 @@ $primary-color: #003346
     top: 60px
   z-index: 5
 #top-right
-  height: 200px
-  margin-left: 280px
+  height: 105px
+  margin-left: 387px
   margin-top: 30px
   position: absolute
-  width: 200px
+  width: 60px
 #line-top-right
   margin:
     left: -27px
