--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no maximum-scale=1">
     <title>
-      <%= I18n.t('presentation.title', man: "#{I18n.t('presentation.me')}") %>
+      <%= t('presentation.title', man: "#{t('presentation.me')}") %>
     </title>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
