--- a/app/views/welcome/testLemming.erb
+++ b/app/views/welcome/testLemming.erb
@@ -1,8 +1,5 @@
-<div id="presentation" class="row">
-  <div id="map">
-    <div id ="lem1" class="lemmings right" data-id="right">
-    </div>
-    <div id ="lem2" class="lemmings left" data-id="left">
-    </div>
+<div id="slide2">
+  <div id="" class="slide-inside">
+    <canvas id="map"></canvas>
   </div>
 </div>
