--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,31 @@
-<div id="presentation" class="row">
+<!-- <div id="all">
+
+</div>-->
+<div id="slide1">
+<div id="presentation" class="slide-inside">
   <div id="face">
   </div>
 <!-- the top of presentation : contain menu -->
   <div id="pres-top">
-    <div id="top-left">
+    <div id="home">
+      <div class="circle" data-page="1" onmouseover="animLine(this)" onmouseout="inanimeLine(this)" onClick="scrolling(this)">
+        <div id="pict-circle-home">
+          <svg class="home-icon home-icon-2" viewBox="57 -9 68 184" height="60px" width="67px" version="1.1">
+            <g id="g3165" transform="translate(-67.238851,-78.299985)">
+              <path inkscape:connector-curvature="0" id="path3151" d="m 104.63599,213.6591 c -3.69571,-0.10312 -5.96368,-0.28313 -6.504516,-0.51626 -4.507005,-1.94282 			-6.639776,-3.68783 -8.088187,-6.61764 l -1.045816,-2.11545 -0.184808,-27.14019 c -0.101644,-14.92711 -0.101644,-27.21587 0,-27.30836 0.101644,-0.0925 			12.000167,-10.2877 26.441167,-22.65602 21.41523,-18.34156 26.34872,-22.4443 26.75735,-22.25165 0.27555,0.1299 12.21485,10.82333 26.53179,23.76317 l 			26.03079,23.52697 -0.0229,13.8394 c -0.0126,7.61167 -0.10267,19.44436 -0.20012,26.29486 l -0.17719,12.45546 -0.77679,1.47811 c -1.54268,2.93547 		-3.99089,4.96719 -7.73404,6.41832 l -2.00373,0.77679 -12.7557,0.20121 -12.7557,0.2012 -0.18383,-13.53342 c -0.1011,-7.44339 -0.18396,-16.65481 			-0.18413,-20.46984 -2.8e-4,-6.75333 -0.0187,-6.98346 -0.69668,-8.71882 -1.29146,-3.30558 -2.92623,-5.21899 -5.66976,-6.63613 -1.12913,-0.58324 -1.7888,-0.6662 			-7.05809,-0.88767 -9.68545,-0.40708 -12.1028,0.007 -14.88817,2.55313 -1.57777,1.44199 -2.66655,3.20389 -3.52907,5.71086 -0.51971,1.51058 -0.54273,2.43259 			-0.54273,21.73968 l 0,20.16219 -7.54247,-0.0558 c -4.14836,-0.0307 -10.09584,-0.12704 -13.21663,-0.21411 z m 43.8709,-68.35024 c 3.05096,-0.80694 			5.95419,-2.24084 7.33714,-3.62378 4.31552,-4.31552 3.77002,-12.33056 -1.17581,-17.27618 -3.7138,-3.71365 -9.50831,-5.22746 -16.45166,-4.29797 -6.55014,0.87684 			-10.64965,3.8641 -12.89682,9.39774 -0.76143,1.87501 -0.94341,5.85317 -0.35962,7.86134 1.26609,4.35519 3.97829,6.25059 11.51093,8.04432 2.48963,0.59285 			3.39331,0.67603 6.36168,0.58559 2.34652,-0.0715 4.17239,-0.29387 5.67416,-0.69106 l 0,0 z"
+       		style="fill:#aaccff;fill-opacity:1;stroke:#aaccff;stroke-width:0.27678797;stroke-linecap:round;stroke-linejoin:round;
+		stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+    	      <path inkscape:connector-curvature="0" id="path3153" d="m 73.185551,149.83446 c -2.436963,-0.51491 -4.959264,-2.63749 -5.515796,-4.64168 -0.425829,-1.5335 			-0.36311,-3.30701 0.152898,-4.32355 2.146247,-4.22813 11.611755,-12.87945 37.661847,-34.42229 15.61708,-12.914981 21.23461,-17.611941 27.07207,-22.635678 			2.43573,-2.096202 4.89157,-4.047578 5.45742,-4.336391 2.66167,-1.358542 5.69523,-1.240613 8.01002,0.31139 0.66128,0.443364 3.70331,2.95919 6.76008,5.590723 			3.05677,2.631534 12.63769,10.638665 21.29093,17.793626 31.07218,25.69216 39.25216,33.14156 41.79825,38.06516 0.63125,1.22071 0.40118,3.16561 -0.58988,4.98651 			-1.24472,2.28697 -3.54345,3.64455 -6.19495,3.65862 -1.40809,0.007 -1.75059,-0.13452 -4.56401,-1.89205 -1.67292,-1.04506 -3.79035,-2.46816 -4.70539,-3.16244 			-1.684,-1.2777 -22.32912,-19.12477 -45.11944,-39.00435 -6.8505,-5.975561 -12.60054,-10.925401 -12.77787,-10.999631 -0.17733,-0.0742 -5.15952,4.08137 			-11.07152,9.234671 -29.48154,25.69814 -46.441194,40.28969 -48.418541,41.65778 -5.549157,3.83935 -7.16502,4.55929 -9.246118,4.11958 z"
+       		style="fill:#80b3ff;fill-opacity:1;stroke:#80b3ff;stroke-width:0.27678797;stroke-linecap:round;
+		stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+  	    </g>
+          </svg>
+        </div>
+      </div>
+    </div>
 <!-- first menu option -->
-      <div class="circle" data-id="top-left" id="circle-top-left" onmouseover="animLine(this)" onmouseout="inanimeLine(this)" title="<%= t('warning.progress') %>">
+    <div id="top-left">
+      <div class="circle" data-page="2" data-id="top-left" id="circle-top-left" onmouseover="animLine(this)" onmouseout="inanimeLine(this)" onClick="scrolling(this)">
         <div id="pict-circle-top-left">
           <svg class="heart-icon heart-icon-2" viewBox="0 0 90.65 85.04" height="37px" width="43px" version="1.1">
             <path class="heart-2" d=" M45.137,23.041c4.912-24.596,40.457-27.775,42.128-0.435c1.398,22.88-21.333,40.717-42.128,50.522 M45.137,23.041
@@ -155,6 +175,132 @@
     <div id="circle-inside">
     </div>
     <div id="burst-12">
+    </div>
+  </div>
+</div>
+</div>
+<div id="slide2">
+<!--
+  <div id="map" class="slide-inside">
+   <div id ="lem1" class="lemmings" data-id="right" data-etape="0">
+   </div>
+  </div>
+-->
+  <div id="place">
+  </div>
+  <div id="rubicks">
+    <div id="rub-red">
+      <div id="rub-red-top" class="rub-top">
+        <div class="ruby-cube" id="rrt1"><p class="cube-txt-left cube-txt-top">Annimé </p>
+					<p class="cube-txt-right cube-txt-bot">pour l</p></div>
+        <div class="ruby-cube" id="rrt2"><p class="cube-txt-left cube-txt-top">D'une</p>
+					<p class="cube-txt-right cube-txt-top">p</p>
+					<p class="cube-txt-left cube-txt-bot">a</p>
+					<p class="cube-txt-right cube-txt-bot"> logi</p></div>
+        <div class="ruby-cube" id="rrt3"><p class="cube-txt-left cube-txt-top">assion</p>
+					<p class="cube-txt-left cube-txt-bot">que,</p></div>
+      </div>
+      <div id="rub-red-middle" class="rub-mid">
+        <div class="ruby-cube" id="rrm1"><p class="cube-txt-right cube-txt-top">les én</p></div>
+        <div class="ruby-cube" id="rrm2"><p class="cube-txt-left cube-txt-top">igmes</p>
+					<p class="cube-txt-right cube-txt-bot">se suc</p></div>
+        <div class="ruby-cube" id="rrm3"><p class="cube-txt-left cube-txt-bot">cèdent,</p></div>
+      </div>
+      <div id="rub-red-bottom" class="rub-bot">
+        <div class="ruby-cube" id="rrb1"><p class="cube-txt-right cube-txt-top">deven</p>
+					<p class="cube-txt-right cube-txt-bot">de def</p></div>
+        <div class="ruby-cube" id="rrb2"><p class="cube-txt-left cube-txt-top">ant</p>
+					<p class="cube-txt-right cube-txt-top">a</p>
+					<p class="cube-txt-left cube-txt-bot">is à</p>
+					<p class="cube-txt-right cube-txt-bot">re</p></div>
+        <div class="ruby-cube" id="rrb3"><p class="cube-txt-left cube-txt-top">utant</p>
+					<p class="cube-txt-left cube-txt-bot">levés</p></div>
+      </div>
+    </div>
+    <div id="rub-white">
+      <div id="rub-white-top" class="">
+        <div class="ruby-cube" id="rwt1"></div>
+        <div class="ruby-cube" id="rwt2"></div>
+        <div class="ruby-cube" id="rwt3"></div>
+      </div>
+      <div id="rub-white-middle" class="">
+        <div class="ruby-cube" id="rwm1"></div>
+        <div class="ruby-cube" id="rwm2"></div>
+        <div class="ruby-cube" id="rwm3"></div>
+      </div>
+      <div id="rub-white-bottom" class="">
+        <div class="ruby-cube" id="rwb1"></div>
+        <div class="ruby-cube" id="rwb2"></div>
+        <div class="ruby-cube" id="rwb3"></div>
+      </div>
+    </div>
+    <div id="rub-orange">
+      <div id="rub-orange-top" class="rub-top">
+        <div class="ruby-cube" id="rot1"></div>
+        <div class="ruby-cube" id="rot2"></div>
+        <div class="ruby-cube" id="rot3"></div>
+      </div>
+      <div id="rub-orange-middle" class="rub-mid">
+        <div class="ruby-cube" id="rom1"></div>
+        <div class="ruby-cube" id="rom2"></div>
+        <div class="ruby-cube" id="rom3"></div>
+      </div>
+      <div id="rub-orange-bottom" class="rub-bot">
+        <div class="ruby-cube" id="rob1"></div>
+        <div class="ruby-cube" id="rob2"></div>
+        <div class="ruby-cube" id="rob3"></div>
+      </div>
+    </div>
+    <div id="rub-yellow">
+      <div id="rub-yellow-top" class="">
+        <div class="ruby-cube" id="ryt1"></div>
+        <div class="ruby-cube" id="ryt2"></div>
+        <div class="ruby-cube" id="ryt3"></div>
+      </div>
+      <div id="rub-yellow-middle" class="">
+        <div class="ruby-cube" id="rym1"></div>
+        <div class="ruby-cube" id="rym2"></div>
+        <div class="ruby-cube" id="rym3"></div>
+      </div>
+      <div id="rub-yellow-bottom" class="">
+        <div class="ruby-cube" id="ryb1"></div>
+        <div class="ruby-cube" id="ryb2"></div>
+        <div class="ruby-cube" id="ryb3"></div>
+      </div>
+    </div>
+    <div id="rub-blue">
+      <div id="rub-blue-top" class="rub-top">
+        <div class="ruby-cube" id="rbt1"></div>
+        <div class="ruby-cube" id="rbt2"></div>
+        <div class="ruby-cube" id="rbt3"></div>
+      </div>
+      <div id="rub-blue-middle" class="rub-mid">
+        <div class="ruby-cube" id="rbm1"></div>
+        <div class="ruby-cube" id="rbm2"></div>
+        <div class="ruby-cube" id="rbm3"></div>
+      </div>
+      <div id="rub-blue-bottom" class="rub-bot">
+        <div class="ruby-cube" id="rbb1"></div>
+        <div class="ruby-cube" id="rbb2"></div>
+        <div class="ruby-cube" id="rbb3"></div>
+      </div>
+    </div>
+    <div id="rub-green">
+      <div id="rub-green-top" class="rub-top">
+        <div class="ruby-cube" id="rgt1"></div>
+        <div class="ruby-cube" id="rgt2"></div>
+        <div class="ruby-cube" id="rgt3"></div>
+      </div>
+      <div id="rub-green-middle" class="rub-mid">
+        <div class="ruby-cube" id="rgm1"></div>
+        <div class="ruby-cube" id="rgm2"></div>
+        <div class="ruby-cube" id="rgm3"></div>
+      </div>
+      <div id="rub-green-bottom" class="rub-bot">
+        <div class="ruby-cube" id="rgb1"></div>
+        <div class="ruby-cube" id="rgb2"></div>
+        <div class="ruby-cube" id="rgb3"></div>
+      </div>
     </div>
   </div>
 </div>
