add non functionnal branch to checkout

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -316,11 +316,12 @@
 </div>
 <div id="slide3" class="row col-sm-12">
   <div id="rugby" class="col-sm-6">
+    <div id="prez-stadium">
+      <p>Certains sports aprennent l'esprit d'équipe</p>
+    </div>
     <div id="stadium" onmouseenter="replayRugby()" onmouseleave="pauseRugby()">
       <div>
         <div id="stade">
-          <div css= "enemy-rugby" id="enemy1">
-          </div>
         </div>
       </div>
       <div id="around-player">
@@ -329,6 +330,9 @@
         <div id="player-circle">
         </div>
       </div>
+    </div>
+    <div id="prez-rugby">
+      <p>10 ans de pratique du rugby en compétition</p>
     </div>
   </div>
   <div id="walk" class="col-sm-6">
