--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -480,7 +480,7 @@ $primary-color: #003346
     +transform(rotateY(0deg)) 
 @keyframes rotateT
   0%
-    +transform(rotateZ(180deg) rotateX(90deg) translateZ(227px))
+    +transform(rotateZ(180deg) rotateX(90deg) translateZ(-227px))
   50%
     +transform(rotateY(180deg) rotateX(90deg) translateZ(227px))
   100%
@@ -690,15 +690,29 @@ $primary-color: #003346
   margin-left: -1%
   width: 101%
   box-shadow: 0px -25px 25px black
+  background-color: #007825
 
 #rugby
   height: 600px
+#prez-stadium
+  font-family: "first-font"
+  font-size: 30px
+  text-align: center
+  color: white
+#prez-rugby
+  font-family: "first-font"
+  font-size: 15px
+  color: white
+  position: absolute
+  right: 60px
+  width: 100px
+  top: 95px
 
 #stadium
   //cursor: url("/assets/walk_back.gif"), auto
-  height: 650px
-  margin-top: 30px
+  height: 600px
   overflow: hidden
+  margin-top: 20px
   width: 599px
   cursor: url('/assets/ball.png'), auto
 #stadium-goal
