--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,7 +20,7 @@ $primary-color: #003346
 body
   background-color: $primary-color
   width : 100%
-  //overflow: hidden
+  overflow: hidden
 @viewport
   width: 600px
   zoom: 1
