--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -317,7 +317,7 @@
 <div id="slide3" class="row col-sm-12">
   <div id="rugby" class="col-sm-6">
     <div id="prez-stadium">
-      <p>Certains sports aprennent l'esprit d'équipe</p>
+      <p>Certains sports forgent l'esprit d'équipe</p>
     </div>
     <div id="stadium" onmouseenter="replayRugby()" onmouseleave="pauseRugby()">
       <div>
@@ -332,9 +332,40 @@
       </div>
     </div>
     <div id="prez-rugby">
-      <p>10 ans de pratique du rugby en compétition</p>
+      <div id="prez-rugby-pot-left"></div>
+      <div id="prez-rugby-pot-right"></div>
+      <div>
+        <p>RUGBY</p>
+        <p><span style="color: red;">10</span> : <span style="color: green;">ans</span></p>
+<!--
+        <p>......</p>
+        <p>score</p>
+        <p>000</p>
+ -->
+      </div>
     </div>
   </div>
   <div id="walk" class="col-sm-6">
+    <div id="pres-walk">
+      <p>D'autres développent l'autonomie</p>
+    </div>
+    <div id="france-map">
+      <div id="map-prez">
+      </div>
+        <div data-blind-id='1' id='blind1' class="blind-picture"></div>
+        <div data-blind-id='2' id='blind2' class="blind-picture"></div>
+        <div data-blind-id='3' id='blind3' class="blind-picture"></div>
+        <div data-blind-id='4' id='blind4' class="blind-picture"></div>
+
+    </div>
+  </div>
+  <div class="slideshow">
+    <div></div>
+    <ul>
+      <li><img src="/assets/randonnee/01.jpg" alt="Chartres" /></li>
+      <li><img src="/assets/randonnee/02.jpg" alt="Tante" /></li>
+      <li><img src="/assets/randonnee/03.jpg" alt="Route" /></li>
+      <li><img src="/assets/randonnee/04.jpg" alt="BD" /></li>
+    </ul>
   </div>
 </div>
